--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 # Firebase Configuration
-# You only need to set your Firebase project ID
+VITE_FIREBASE_API_KEY=your-firebase-api-key
+VITE_FIREBASE_AUTH_DOMAIN=your-firebase-auth-domain
 VITE_FIREBASE_PROJECT_ID=your-firebase-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-firebase-storage-bucket
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-firebase-messaging-sender-id
+VITE_FIREBASE_APP_ID=your-firebase-app-id
+VITE_FIREBASE_MEASUREMENT_ID=your-firebase-measurement-id
 
-# Note: Other Firebase configuration values are now directly set in src/lib/firebase.ts
-# No need to set these environment variables anymore
-
-# Old Supabase variables (no longer used)
-# VITE_SUPABASE_URL=your-supabase-url
-# VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+# PayPal Configuration
+VITE_PAYPAL_CLIENT_ID=your-paypal-client-id
