--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
-  publish = "dist"
   command = "npm run build"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "18"
+  VITE_NODE_ENV = "production"
 
 [[redirects]]
   from = "/*"
@@ -26,14 +27,14 @@
     Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
   for = "/manifest.json"
   [headers.values]
     Content-Type = "application/manifest+json"
-
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    cache-control = "public, max-age=31536000, immutable"
 
 [context.production.environment]
   VITE_NODE_ENV = "production"
