--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@lucide/lab": "^0.1.2",
     "@paypal/react-paypal-js": "^8.8.3",
     "@supabase/supabase-js": "^2.39.7",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
