--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.8.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-helmet-async": "^2.0.5",
