--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-ga4": "^2.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
