--- a/netlify.toml
+++ b/netlify.toml
@@ -1,40 +1,63 @@
+# Configuración de Netlify para FutCamisRetros
+
 [build]
-  command = "npm run build"
   publish = "dist"
+  command = "npm run build"
 
-[build.environment]
-  NODE_VERSION = "18"
-  VITE_NODE_ENV = "production"
-
+# Redirecciones para SPA (Single Page Application)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-[[headers]]
-  for = "/static/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+# Redirecciones para SEO
+[[redirects]]
+  from = "/camisetas"
+  to = "/catalog"
+  status = 301
 
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+[[redirects]]
+  from = "/camisetas-retro"
+  to = "/league/retro"
+  status = 301
 
-[[headers]]
-  for = "/*.css"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+[[redirects]]
+  from = "/camisetas-baratas"
+  to = "/catalog?sort=price-asc"
+  status = 301
 
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+# Configuración de plugins
+[[plugins]]
+  package = "@netlify/plugin-sitemap"
+  
+  [plugins.inputs]
+  buildDir = "dist"
+  prettyURLs = true
+  trailingSlash = false
 
-[[headers]]
-  for = "/manifest.json"
-  [headers.values]
-    Content-Type = "application/manifest+json"
+[[plugins]]
+  package = "netlify-plugin-cache"
+  
+  [plugins.inputs]
+  paths = [
+    "node_modules/.cache",
+    "dist"
+  ]
 
-[context.production.environment]
-  VITE_NODE_ENV = "production"
+# Configuración de optimización
+[build.processing]
+  skip_processing = false
+
+[build.processing.css]
+  bundle = true
+  minify = true
+
+[build.processing.js]
+  bundle = true
+  minify = true
+
+[build.processing.html]
+  pretty_urls = true
+
+[build.processing.images]
+  compress = true
