--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "lucide-react": "^0.523.0",
     "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
