--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,11 @@
 
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "export NODE_OPTIONS=\"--max-old-space-size=4096\" && npm run build"
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--no-audit --no-fund"
 
 # Redirecciones para SPA (Single Page Application)
 [[redirects]]
