--- a/netlify.toml
+++ b/netlify.toml
@@ -52,16 +52,16 @@
 [build.processing]
   skip_processing = false
 
-[build.processing.css]
-  bundle = true
-  minify = true
-
 [build.processing.js]
   bundle = true
-  minify = true
+  minify = false
+
+[build.processing.css]
+  bundle = true
+  minify = false
 
 [build.processing.html]
   pretty_urls = true
 
 [build.processing.images]
-  compress = true
+  compress = false
